<?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@android:color/transparent">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/corner_white_4_solid"
    android:orientation="vertical"
    tools:context="com.banshouweng.bswBase.widget.BswAlertDialog.BswAlertDialog"
    tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage,ContentDescription">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:layout_marginTop="@dimen/size_30"
        android:gravity="center"
        android:text="@string/confirm_abandon"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size_17" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        android:gravity="center"
        android:paddingLeft="@dimen/size_32"
        android:paddingRight="@dimen/size_32"
        android:text="@string/confirm_abandon"
        android:textSize="@dimen/size_14"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20" />

    <include layout="@layout/horizontal_line" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/size_15"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_17" />

        <View
            android:id="@+id/dialog_middle_line"
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:background="@color/color_ccc" />

        <TextView
            android:id="@+id/dialog_confirm"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/size_15"
            android:text="@string/confirm"
            android:textColor="@color/green"
            android:textSize="@dimen/size_17" />
    </LinearLayout>
</LinearLayout><!--</RelativeLayout>-->